<resources>
    <string name="app_name">FE3H Guide</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_guide">Guide</string>
    <string name="calculator">Calculator</string>
    <string name="nav_characters">Characters</string>
    <string name="nav_classes">Classes</string>
    <string name="nav_tea_time">Tea time</string>
    <string name="nav_supports">Supports</string>

    <string name="nav_secondary_group">Options</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="content_description_heading">Heading for the tea time fragment</string>
    <string name="content_description_icon">Icon of the selected character</string>
    <string name="character_hint">Character</string>
    <string name="have_tea">Have tea</string>
    <string name="favourite_teas">Favorite teas</string>
    <string name="liked_by_everyone">Liked by everyone</string>
    <string name="liked_specifically_by">Liked specifically by</string>
    <string name="teas_liked_by_everyone">Hresvelg Blend\nLeicester Cortania</string>
    <string name="topics">Topics</string>
    <string name="search_for_a_topic">Search for a topic</string>
    <string name="final_conversation_title">Final Conversation</string>

    <string name="show_supports">Show supports</string>
    <string name="no_selection">Select a character</string>
    <string name="c_support">C Support</string>
    <string name="c_plus_support">C+ Support</string>
    <string name="b_support">B Support</string>
    <string name="b_plus_support">B+ Support</string>
    <string name="a_support">A Support</string>
    <string name="a_plus_support">A+ Support</string>
    <string name="s_support">S Support</string>

    <string name="byleth">Byleth</string>
    <string name="church_of_seiros">Church of Seiros</string>
    <string name="ashen_wolves">Ashen Wolves</string>
    <string name="black_eagles">Black Eagles</string>
    <string name="blue_lions">Blue Lions</string>
    <string name="golden_deer">Golden Deer</string>

    <string name="title_general_tab">General</string>
    <string name="title_abilities_tab">Abilities</string>
    <string name="title_magic_tab">Magic</string>
    <string name="combat_arts_tab">Combat Arts</string>
    <string name="likes_dislikes_tab">Likes</string>

    <string name="stats">Stats</string>
    <string name="base_stats">Base stats</string>
    <string name="hp">HP</string>
    <string name="str">Str</string>
    <string name="mag">Mag</string>
    <string name="dex">Dex</string>
    <string name="spd">Spd</string>
    <string name="lck">Lck</string>
    <string name="def">Def</string>
    <string name="res">Res</string>
    <string name="cha">Cha</string>
    <string name="growth_rates">Growth rates</string>
    <string name="skills">Skills</string>
    <string name="sword">Sword</string>
    <string name="lance">Lance</string>
    <string name="axe">Axe</string>
    <string name="bow">Bow</string>
    <string name="brawling">Brawling</string>
    <string name="authority">Authority</string>
    <string name="heavy_armor">Heavy Armor</string>
    <string name="riding">Riding</string>
    <string name="flying">Flying</string>
    <string name="up_down">Up Down</string>
    <string name="budding_talent">Budding talent</string>
    <string name="pronouns">Pronouns</string>
    <string name="faction">Faction</string>
    <string name="birthday">Birthday</string>
    <string name="fodlan_birthday">Fódlan Birthday</string>
    <string name="crest">Crest</string>
    <string name="recruitment">Recruitment</string>
    <string name="spoiler_alert">May contain spoilers</string>

    <string name="error">Error</string>
    <string name="gifts">Gifts</string>
    <string name="favourite">Favorite</string>
    <string name="disliked">Disliked</string>
    <string name="meals">Meals</string>
    <string name="lost_items">Lost items</string>
    <string name="skill_level">Skill level</string>
    <string name="reason">Reason</string>
    <string name="faith">Faith</string>
    <string name="unique">Unique</string>
    <string-array name="abilities_types">
        <item>All abilities</item>
        <item>Skill level abilities</item>
        <item>Class abilities</item>
        <item>Class mastery abilities</item>
        <item>Other abilities</item>
    </string-array>
    <string-array name="combat_arts_types">
        <item>All combat arts</item>
        <item>Skill level combat arts</item>
        <item>Weapon exclusive combat arts</item>
        <item>Class mastery combat arts</item>
        <item>Other combat arts</item>
    </string-array>
    <string name="class_ingame">Class</string>
    <string name="weapon">Weapon:</string>
    <string name="effect">Effect</string>
    <string name="origin">Origin</string>
    <string name="dur">Dur</string>
    <string name="mt">Mt</string>
    <string name="hit">Hit</string>
    <string name="avo">Avo</string>
    <string name="crit">Crit</string>
    <string name="range">Range</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="rank">Rank</string>
    <string name="uses">Uses</string>

    <string name="calculate">Calculate</string>
    <string name="displayed_hit_input">Choose a Displayed Hit:</string>
    <string name="true_hit_probability">True Hit Probability:</string>
    <string name="displayed_hit">Displayed Hit</string>
    <string name="true_hit">True Hit</string>
    <string name="explanation">In regards to the probability of hitting an enemy with an attack, Fire Emblem: Three Houses does not show the real value used in the game calulations.</string>
    <string name="explanation_2">Instead, the player sees a slightly altered percentage (Displayed Hit), so that it appears that luck has a lesser impact on the combat.</string>
    <string name="explanation_3">The system used to calculate the real hit probability (True Hit) is called 2RN, as it generates two random numbers. This value is not directly shown ingame, but can be checked here.</string>

    <string name="class_name">Class name</string>
    <string name="class_icon">Class icon</string>
    <string name="all">All</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="master">Master</string>
    <string name="dlc">DLC</string>
    <string name="proficiencies">Proficiencies</string>
    <string name="mastery_ability">Mastery ability</string>
    <string name="mastery_combat_art">Mastery combat art</string>
    <string name="certification_requirements">Certifications requirements</string>
    <string name="seal">Seal:</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="experience">Experience:</string>

    <string name="disclaimer">Disclaimer</string>
    <string name="twitter">Twitter:</string>
    <string name="resources">Resources used</string>

    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="choose_home">Select default tab</string>

    <string name="nav_paralogues">Paralogues</string>
    <string name="nav_battalions">Battalions</string>
    <string name="nav_faculty_training">Faculty Training</string>
    <string name="nav_lecture_questions">Lecture Questions</string>
    <string name="nav_weapons">Weapons</string>
    <string-array name="weapon_sort_options">
        <item>Alphabetical</item>
        <item>Mt: High → Low</item>
        <item>Hit: High → Low</item>
        <item>Crit: High → Low</item>
        <item>Wt: Low → High</item>
        <item>Uses: High → Low</item>
    </string-array>
    <string-array name="weapon_type_options">
        <item>All Types</item>
        <item>Sword</item>
        <item>Lance</item>
        <item>Axe</item>
        <item>Bow</item>
        <item>Gauntlet</item>
    </string-array>
    <string-array name="faculty_skill_options">
        <item>All Skills</item>
        <item>Sword</item>
        <item>Lance</item>
        <item>Axe</item>
        <item>Bow</item>
        <item>Brawling</item>
        <item>Reason</item>
        <item>Faith</item>
        <item>Authority</item>
        <item>Heavy Armor</item>
        <item>Riding</item>
        <item>Flying</item>
    </string-array>
    <string name="nav_abilities">Abilities</string>
    <string name="battalion_type_infantry">Infantry</string>
    <string name="battalion_type_cavalry">Cavalry</string>
    <string name="battalion_type_armored">Armored</string>
    <string name="battalion_type_flying">Flying</string>
    <string name="endurance">Endurance</string>
    <string name="prt">Prt</string>
    <string name="rsl">Rsl</string>
    <string name="stat_boosts">Stat Boosts</string>
    <string name="gambit">Gambit</string>
    <string name="gambit_type">Gambit type icon</string>
    <string name="formation_image">Formation diagram</string>
    <string name="battalion_rank_e">E</string>
    <string name="battalion_rank_d">D</string>
    <string name="battalion_rank_c">C</string>
    <string name="battalion_rank_b">B</string>
    <string name="battalion_rank_a">A</string>
    <string name="movement_type">Movement</string>
    <string name="sort_label">Sort</string>
    <string-array name="paralogue_route_options">
        <item>All Routes</item>
        <item>Azure Moon</item>
        <item>Crimson Flower</item>
        <item>Verdant Wind</item>
        <item>Silver Snow</item>
    </string-array>
    <string-array name="battalion_sort_options">
        <item>Alphabetical</item>
        <item>Authority Level</item>
        <item>Endurance</item>
        <item>Gambit Might</item>
    </string-array>

</resources>