<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_characters"
            android:checked="true"
            android:icon="@drawable/ic_menu_characters"
            android:title="@string/nav_characters" />

        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/calculator"/>

        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_menu_classes"
            android:title="@string/nav_classes" />

        <item
            android:id="@+id/nav_tea_time"
            android:icon="@drawable/ic_menu_teatime"
            android:title="@string/nav_tea_time" />

        <item
            android:id="@+id/nav_supports"
            android:icon="@drawable/ic_supports"
            android:title="@string/nav_supports" />

        <item
            android:id="@+id/nav_battalions"
            android:icon="@drawable/ic_menu_battalions"
            android:title="@string/nav_battalions" />

        <item
            android:id="@+id/nav_abilities"
            android:icon="@drawable/ic_menu_abilities"
            android:title="@string/nav_abilities" />

        <item
            android:id="@+id/nav_faculty_training"
            android:icon="@drawable/ic_menu_faculty_training"
            android:title="@string/nav_faculty_training" />

        <item
            android:id="@+id/nav_lecture_questions"
            android:icon="@drawable/ic_menu_lecture"
            android:title="@string/nav_lecture_questions" />

        <item
            android:id="@+id/nav_weapons"
            android:icon="@drawable/ic_menu_weapons"
            android:title="@string/nav_weapons" />

        <item android:title="@string/nav_secondary_group">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_menu_settings"
                        android:title="@string/nav_settings" />
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/ic_menu_about"
                        android:title="@string/nav_about" />
                </group>
            </menu>
        </item>

    </group>

</menu>